--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/lib-storage": "^3.701.0",
     "@types/fluent-ffmpeg": "^2.1.27",
     "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
