--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "opencage-api-client": "^1.0.7",
     "sharp": "^0.33.5",
